fix taginput box overflow

--- a/app/styles/ntd-main.scss
+++ b/app/styles/ntd-main.scss
@@ -245,54 +245,6 @@ form {
     }
 }
 
-// Tag input
-.tag-input-container ul {
-  @include border-radius(3px);
-  list-style: none;
-  margin: 0;
-  padding:0;
-  background-color: white;
-  border: 1px solid #cccccc;
-}
-.tag-input-container ul.focus {
-  border-color: rgba(82, 168, 236, 0.8);
-  outline: 0;
-  outline: thin dotted \9;
-  /* IE6-9 */
-  // -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-  // -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-  // box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-}
-.tag-input-container ul .tag {
-  padding: 0 2px;
-  margin: 2px 0 0 2px;
-  display: block;
-  border: 1px solid #aaaaaa;
-  background-color: #fff;
-  @include border-radius(2px);
-  float: left;
-}
-.tag-input-container ul .tag span {
-  padding: 3px 2px 2px;
-  float: left;
-}
-.tag-input-container ul .tag i {
-  cursor: pointer;
-  margin: 3px 3px 0;
-  float: left;
-}
-.tag-input-container ul .input-li input {
-  border: none;
-  width: 80px;
-  margin: 0 3px;
-  background: transparent !important;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-}
-.tag-input-container ul .input-li input:focus {
-  outline: none;
-}
 
 // chosen
 
